--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "url": "https://github.com/Deluze"
     },
     "devDependencies": {
+        "@types/json-to-pretty-yaml": "^1.2.1",
         "@types/screenshot-desktop": "^1.12.3",
         "@types/turndown": "^5.0.5",
         "@vitejs/plugin-vue": "^5.2.1",
@@ -31,15 +32,19 @@
         "vue-tsc": "^2.2.0"
     },
     "dependencies": {
+        "@electron/remote": "^2.1.2",
         "@iconify/vue": "^4.3.0",
         "@vueuse/core": "^12.4.0",
         "@vueuse/motion": "^2.2.6",
+        "json-to-pretty-yaml": "^1.2.2",
         "marked": "^15.0.6",
         "nanoevents": "^9.1.0",
+        "node-fetch": "2",
         "path-browserify": "^1.0.1",
         "turndown": "^7.2.0",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
+        "winston": "^3.17.0",
         "xel": "^0.33.7"
     }
 }
