--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "main/main.js",
     "scripts": {
         "dev": "node scripts/dev-server.js",
-        "build": "node scripts/build.js && electron-builder",
+        "build-guest-server": "cd guest_server && GOOS=windows GOARCH=amd64 go build -o winboat_guest_server.exe main.go",
+        "build": "npm run build-guest-server && cp guest_server/winboat_guest_server.exe src/main/static && cp -r src/renderer/public/* src/main/static && node scripts/build.js && electron-builder && rm -rf src/main/static/* && touch src/main/static/.gitkeep",
         "build:win": "node scripts/build.js && electron-builder --win",
         "build:mac": "node scripts/build.js && electron-builder --mac",
         "build:linux": "node scripts/build.js && electron-builder --linux"
@@ -45,6 +46,7 @@
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
         "winston": "^3.17.0",
-        "xel": "^0.33.7"
+        "xel": "^0.33.7",
+        "yaml": "^2.7.1"
     }
 }
