--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "node scripts/dev-server.js",
         "build-guest-server": "cd guest_server && GOOS=windows GOARCH=amd64 go build -o winboat_guest_server.exe main.go",
-        "build": "npm run build-guest-server && cp guest_server/winboat_guest_server.exe src/main/static && cp -r src/renderer/public/* src/main/static && node scripts/build.js && electron-builder && rm -rf src/main/static/* && touch src/main/static/.gitkeep",
+        "build": "npm run build-guest-server && cp -r src/renderer/public/* src/main/static && node scripts/build.js && electron-builder && rm -rf src/main/static/* && touch src/main/static/.gitkeep",
         "build:win": "node scripts/build.js && electron-builder --win",
         "build:mac": "node scripts/build.js && electron-builder --mac",
         "build:linux": "node scripts/build.js && electron-builder --linux"
