--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm ci
 
       - name: Build guest server and app
-        run: npm run build:linux
+        run: npm run build:linux-gs
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -55,13 +55,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'npm'
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '>=1.22.0'
+          go-version: '>=1.24.2'
 
       - name: Install Flatpak dependencies
         run: |
