--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "devDependencies": {
         "@types/json-to-pretty-yaml": "^1.2.1",
+        "@types/node-fetch": "^2.6.12",
         "@types/screenshot-desktop": "^1.12.3",
         "@types/turndown": "^5.0.5",
         "@vitejs/plugin-vue": "^5.2.1",
