feat: Generate guest-server zip via build script instead of just CI
We will need it for auto-updates, so need it included within the app, not just releases.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "main/main.js",
     "scripts": {
         "dev": "node scripts/dev-server.js",
-        "build-guest-server": "cd guest_server && GOOS=windows GOARCH=amd64 go build -o winboat_guest_server.exe main.go",
+        "build-guest-server": "cd guest_server && GOOS=windows GOARCH=amd64 go build -o winboat_guest_server.exe main.go && rm -f *.zip && zip -r winboat-guest-server.zip .",
         "build:linux-gs": "npm run build-guest-server && node scripts/build.js && electron-builder --linux"
     },
     "repository": "https://github.com/TibixDev/winboat",
