chore: Add email to package.json for CI to run for Debian

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "repository": "https://github.com/TibixDev/winboat",
     "author": {
         "name": "TibixDev",
-        "url": "https://github.com/TibixDev"
+        "url": "https://github.com/TibixDev",
+        "email": "staff@winboat.app"
     },
     "devDependencies": {
         "@types/json-to-pretty-yaml": "^1.2.1",
