chore: Change CI runner to ubuntu-22.04 to compile with older glibc

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ on:
           - guest-server-only
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: >-
       (github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/')) ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.build_type != 'guest-server-only')
@@ -124,7 +124,7 @@ jobs:
       #       dist/linux-unpacked/resources/guest_server/winboat_guest_server.zip
       #     if-no-files-found: ignore
   guest-server-only:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.build_type == 'guest-server-only'
     steps:
       - name: Checkout code
@@ -145,7 +145,7 @@ jobs:
           name: guest-server-artifacts
           path: guest_server/
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: >-
       startsWith(github.ref, 'refs/tags/') ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.build_type == 'all')
