--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "description": "Windows for Penguins",
     "type": "module",
     "main": "main/main.js",
+    "engines": {
+        "node": ">=23.6.0"
+    },
     "scripts": {
-        "dev": "node scripts/dev-server.js",
+        "dev": "node scripts/dev-server.ts",
         "build-guest-server": "bash build-guest-server.sh",
-        "build:linux-gs": "bash build-guest-server.sh && node scripts/build.js && electron-builder --linux"
+        "build:linux-gs": "bash build-guest-server.sh && node scripts/build.ts && electron-builder --linux"
     },
     "repository": "https://github.com/TibixDev/winboat",
     "author": {
