feat: Install Location & adapt Reset button for this possibility & feat: CPU threads & cores are consistent now, updated to strictly physical cores everywhere (#219)
* feat: Install Location & adapt Reset button for this possibility
fix/chore: CPU threads & cores are consistent now, updated to strictly physical cores everywhere

* chore: Bump version to 0.8.6-alpha for new alpha

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "winboat",
-    "version": "0.8.5",
+    "version": "0.8.6-alpha",
     "description": "Windows for Penguins",
     "type": "module",
     "main": "main/main.js",
@@ -41,6 +41,7 @@
         "@vueuse/core": "^13.1.0",
         "@vueuse/motion": "^2.2.6",
         "apexcharts": "^4.5.0",
+        "check-disk-space": "^3.4.0",
         "consola": "^3.4.2",
         "electron-store": "^11.0.0",
         "form-data": "^4.0.4",
