--- a/.github/workflows/release-src-rpm.yml
+++ b/.github/workflows/release-src-rpm.yml
@@ -45,12 +45,12 @@ jobs:
 
       - name: Install RPM Build Tools
         run: |
+          # Ensure package lists are up-to-date
           sudo apt-get update
-          # FIX: Installing build-essential and the required RPM utilities
-          # build-essential provides fundamental tools like gcc and make
-          # rpm and rpm-build are the core RPM utilities
-          sudo apt-get install -y build-essential rpm rpm-build
-          echo "Installed rpm-build and dependencies successfully."
+          # FIX: On modern Ubuntu runners, 'rpm-build' is sometimes not found.
+          # We install 'rpm' (which provides rpmbuild) and 'build-essential' for fundamental tools.
+          sudo apt-get install -y rpm build-essential
+          echo "Installed RPM tools and dependencies successfully."
 
       - name: Create RPM Build Environment
         run: |
