--- a/.github/workflows/release-src-rpm.yml
+++ b/.github/workflows/release-src-rpm.yml
@@ -63,13 +63,12 @@ jobs:
           echo "Installed RPM tools and dependencies successfully."
 
       - name: Create RPM Build Environment
-        id: create_env # Added ID to pass output
+        id: create_env
         run: |
           # Create the mandatory directory structure for rpmbuild
           mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
           
           # FIX: Dynamically find the .spec file anywhere in the repository and copy it
-          # Search the entire repository structure.
           SPEC_FILE=$(find . -iname "*.spec" -print -quit)
 
           if [ -z "$SPEC_FILE" ]; then
@@ -85,8 +84,10 @@ jobs:
           # Copy the found spec file into the SPECS directory
           cp "$SPEC_FILE" ~/rpmbuild/SPECS/
           
-          # Copy the source tarball from /tmp into the SOURCES directory
-          cp ${{ steps.prep.outputs.TARBALL_PATH }} ~/rpmbuild/SOURCES/
+          # Retrieve and copy the source tarball from /tmp into the SOURCES directory
+          TARBALL_PATH="${{ steps.prep.outputs.TARBALL_PATH }}"
+          echo "Copying tarball from $TARBALL_PATH to ~/rpmbuild/SOURCES/"
+          cp "$TARBALL_PATH" ~/rpmbuild/SOURCES/
           
           # Pass the SPEC_FILENAME to the next step via GITHUB_OUTPUT
           echo "SPEC_FILENAME=$SPEC_FILENAME" >> "$GITHUB_OUTPUT"
@@ -97,7 +98,6 @@ jobs:
           SPEC_FILENAME="${{ steps.create_env.outputs.SPEC_FILENAME }}"
           
           # The -bs flag tells rpmbuild to 'Build Source' package only.
-          # Now that SPEC_FILENAME is correctly set, this command should execute successfully.
           rpmbuild -bs ~/rpmbuild/SPECS/"$SPEC_FILENAME"
 
       - name: Upload Source RPM Artifact
