--- a/.github/workflows/release-src-rpm.yml
+++ b/.github/workflows/release-src-rpm.yml
@@ -137,23 +137,18 @@ jobs:
           name: winboat-srpm
           path: ~/rpmbuild/SRPMS/*.src.rpm
 
-      - name: Debug: Check for COPR Token Secret
-        env:
-          COPR_TOKEN_CHECK: ${{ secrets.COPR_API_TOKEN }} # Pass secret to env for safer checking
+      - name: Debug Check for COPR Token Secret
+        if: ${{ secrets.COPR_API_TOKEN == '' }}
         run: |
-          if [ -z "$COPR_TOKEN_CHECK" ]; then
-            echo "::error::COPR_API_TOKEN secret is NOT set or empty!"
-            echo "You MUST set this secret in your GitHub repository settings under Settings > Secrets > Actions."
-            exit 1
-          else
-            echo "COPR_API_TOKEN secret is successfully loaded (non-empty)."
-          fi
-
+          echo "::error::COPR_API_TOKEN secret is NOT set or empty!"
+          echo "You MUST set this secret in your GitHub repository settings under Settings > Secrets > Actions."
+          exit 1
+          
       - name: Submit SRPM to COPR
         uses: packit/upload-to-copr@v1 # A common, reliable action for COPR submission
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' # Only run on push/manual trigger
         with:
-          copr_project: 'stevensko/WinBoat' 
+          copr_project: 'stevensko/winboat' 
           files: ${{ steps.generate_srpm.outputs.SRPM_FILE_PATH }} 
           token: ${{ secrets.COPR_API_TOKEN }} # <<<--- Uses the secret you must define in GitHub
           preserve_project: true # Keeps the existing COPR project structure
