--- a/.github/workflows/release-src-rpm.yml
+++ b/.github/workflows/release-src-rpm.yml
@@ -141,7 +141,7 @@ jobs:
         id: submit_copr
         run: |
           SRPM_PATH="${{ steps.generate_srpm.outputs.SRPM_FILE_PATH }}"
-          COPR_PROJECT="stevensko/winboat" # Use the assumed working name
+          COPR_PROJECT="stevensko/WinBoat" # Use the assumed working name
           API_ENDPOINT="https://copr.fedorainfracloud.org/api_3/builds/upload/"
           
           echo "Submitting SRPM to COPR project $COPR_PROJECT at $SRPM_PATH..."
